# sky_homework_new

./: .env.example  .flake8  README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
logs/: README.md
src/: csv_excel.py  decorators.py  external_api.py  filtered.py  generators.py  masks.py  mylog.txt  processing.py  utils.py  widget.py
tests/: test_card_number_generator.py  test_csv_excel.py  test_decorators.py  test_external_api.py  test_filter_by_currency.py  test_filtered.py  test_masks.py  test_processing.py  test_transaction_descriptions.py  test_utils.py  test_widget.py
