[tool.poetry]
name = "sky-homework-new"
version = "0.1.0"
description = ""
authors = ["Michael < sorokajr678@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'


[tool.black]
# Максимальная длина строки
line-length = 119
exclude = '''
(
  /(
    | \.git          # в корне проекта
    )
)
'''


[tool.isort]
# максимальная длина строки
line_length = 119
